--- a/Restaurant/css/estilos.css
+++ b/Restaurant/css/estilos.css
@@ -45,6 +45,10 @@ img {
     max-width: 100%;
 }
 
+li {
+    list-style: none;
+}
+
 .no-padding {
     padding: 0;
 }
@@ -79,6 +83,36 @@ img {
 
 .navegacion__enlace {
     color: white;
+    transition: linear .2s all;
+}
+
+.navegacion__enlace:hover {
+    color: black;
+    transition: linear .2s all;
+}
+
+.submenu1 {
+    position: relative;
+    text-align: center;
+    padding: 20px;
+    width: 100%;
+    height: 80px;
+    background: rgb(133, 133, 133);
+    color: white;
+    transition: linear .2s all;
+}
+
+.submenu1:hover {
+    background: black;
+    transition: linear .2s all;
+}
+
+.navegacion li ul {
+    display: none;
+}
+
+.navegacion li:hover ul {
+    display: block;
 }
 
 /* Footer */
