--- a/Restaurant/css/login-registro.css
+++ b/Restaurant/css/login-registro.css
@@ -1,5 +1,5 @@
 html {
-    background-image: url(../img/fondo_login.jpg);
+    background-image: url(../img/fondo-login.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
