--- a/Restaurant/css/carrito.css
+++ b/Restaurant/css/carrito.css
@@ -1,45 +1,160 @@
-.nosotros {
+.carrito {
+    width: 75%;
     margin: 40px auto 40px auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.carrito1 {
     display: grid;
-    grid-template-columns: 70% 30%;
-    column-gap: 20px;
-}
-
-.h1-nosotros {
-    font-size: 30px;
-    text-align: center;
-}
-
-.historia {
-    text-align: justify;
+    grid-template-columns: 40% 20% 10% 20% 10%;
+    grid-template-rows: repeat(2, 1fr);
     background-color: rgb(243, 243, 243);
-    grid-column: 2;
-    padding: 30px;
+    width: 65%;
+    padding: 7px 20px 0 20px;
     border-radius: 10px;
     box-shadow: 2px 2px 5px 0px rgba(150,150,150,1);
 }
 
-.accesos {
-    text-align: justify;
-    background-color: rgb(243, 243, 243);
-    grid-column: 1;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 2px 2px 5px 0px rgba(150,150,150,1);
-}
-
-.h4-nosotros {
+.h4-carrito {
     font-size: 25px;
     text-align: left;
+    grid-column: 1 / 6;
+    margin: auto;
 }
 
-.enlaces-accesos {
+.h5-carrito {
+    font-size: 20px;
+    text-align: left;
+    margin: auto;
+}
+
+.img-producto {
+    width: 150px;
+    grid-column: 1;
+}
+
+.producto {
+    grid-column: 1;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    padding-top: 20px;
+    border-top: 2px solid rgb(189, 189, 189);
+}
+
+.nombre {
+    grid-column: 1;
+    margin: auto;
     color: black;
-    display: block;
-    transition: all .2s ease;
 }
 
-.enlaces-accesos:hover {
+.precio {
+    grid-column: 2;
+    margin: auto;
+}
+
+.cantidad {
+    grid-column: 3;
+    height: 20px;
+    width: 90%;
+    margin: auto;
+}
+.total {
+    grid-column: 4;
+    margin: auto;
+}
+
+.eliminar {
+    grid-column: 5;
+    margin: auto;
     transition: all .2s ease;
-    font-size: 22px;
+    color: red;
+}
+
+.eliminar:hover {
+    transition: all .2s ease;
+    color: black;
+    cursor: pointer;
+}
+
+.resumen {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 6% 57% 7.5% 10%;
+    background-color: rgb(243, 243, 243);
+    width: 33%;
+    height: 680px;
+    padding: 20px 20px 0 20px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 5px 0px rgba(150,150,150,1);
+    line-height: normal;
+}
+
+.detalle {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+.valor {
+    grid-column: 2;
+    grid-row: 2;
+    text-align: right;
+}
+
+.entrada-carrito {
+    grid-column: 1 / 3;
+    grid-row: 3;
+    height: 50px;
+    padding: 10px 0;
+    border-left: 0;
+    border-top: 0;
+    border-right: 0;
+    padding-left: 15px;
+    border-bottom: 1px solid #ffc400;
+    outline: none;
+    background: white;
+    color: black;
+}
+
+.submit-btn {
+    grid-column: 1 / 3;
+    grid-row: 5;
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    padding-top: 10px;
+    color: black;
+    background: #ffc400;
+    border-radius: 30px;
+    transition: linear .2s all;
+}
+
+.submit-btn1 {
+    grid-column: 2;
+    grid-row: 4;
+    width: 100%;
+    height: 40px;
+    cursor: pointer;
+    background: #ffc400;
+    border: 0;
+    transition: linear .2s all;
+}
+
+.submit-btn1:hover {
+    background: #a88102;
+    color: white;
+    transition: linear .2s all;
+}
+
+.submit-btn:hover {
+    background: #a88102;
+    color: white;
+    transition: linear .2s all;
+}
+
+.h4-resumen {
+    grid-column: 1 / 2;
+    grid-row: 1;
+    font-size: 25px;
 }
