--- a/front/estilos/styleMenu.css
+++ b/front/estilos/styleMenu.css
@@ -1,106 +1,110 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap");
 
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-:root{
-    /* Fuentes */
-    --fuente-principal: 'Montserrat', sans-serif;
+:root {
+  /* Fuentes */
+  --fuente-principal: "Montserrat", sans-serif;
 
-    /* Colores */
-    --amarillo: #FFC947;
-    --azul-oscuro: #0A1931;
-    --azul-claro: #185ADB;
-    --blanco: #EFEFEF;
+  /* Colores */
+  --amarillo: #ffc947;
+  --azul-oscuro: #0a1931;
+  --azul-claro: #185adb;
+  --blanco: #efefef;
 
-    /* Tamaño fuentes */
-    --bold: 700;
-    --medium: 500;
-    --light: 300;
+  /* Tamaño fuentes */
+  --bold: 700;
+  --medium: 500;
+  --light: 300;
 }
 
 /*  GENERALES */
-body{
-    color: var(--azul-oscuro);
-    min-height: 100vh;
-    font-family: var(--fuente-principal);
+body {
+  color: var(--azul-oscuro);
+  min-height: 100vh;
+  font-family: var(--fuente-principal);
 }
 
-main{
-    background: var(--blanco);
-    min-height: 100%;
+main {
+  position: relative;
+  background: var(--blanco);
+  min-height: 100%;
 }
 
-nav, footer{
-    align-items: center;
-    /* border: 1px solid black; */
-    display: flex;
-    justify-content: space-between;
-    padding: 15px 60px;
-    font-size: 19px;
-    font-weight: var(--bold);
-    background: var(--amarillo);
+nav,
+footer {
+  align-items: center;
+  /* border: 1px solid black; */
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 60px;
+  font-size: 19px;
+  font-weight: var(--bold);
+  background: var(--amarillo);
 }
 
-nav i, footer i{
-    font-size:25px;
+nav i,
+footer i {
+  font-size: 25px;
 }
 
-nav p, footer p{
-    font-weight: var(--medium);
+nav p,
+footer p {
+  font-weight: var(--medium);
 }
 
 /*  ESTILOS DE PRODUCTO DESTACADO */
 
-.producto-destacado{
-    display: flex;
-    flex-direction: column;
-    grid-gap: 40px;
-    height: 92vh;
-    padding: 0 10%;
-    background: var(--azul-oscuro);
-    color: var(--blanco);
-    align-items: center;
-    justify-content: center;
-    /* min-height: 100px; */
+.producto-destacado {
+  display: flex;
+  flex-direction: column;
+  grid-gap: 40px;
+  height: 92vh;
+  padding: 0 10%;
+  background: var(--azul-oscuro);
+  color: var(--blanco);
+  align-items: center;
+  justify-content: center;
+  /* min-height: 100px; */
 }
 
-.producto-destacado h2{
-    font-size: 30px;
-    /* margin: 10px 0 30px; */
-    text-align: center;
+.producto-destacado h2 {
+  font-size: 30px;
+  /* margin: 10px 0 30px; */
+  text-align: center;
 }
 
-.producto-destacado-cont{
-    width:100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    grid-gap: 30px;
+.producto-destacado-cont {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-gap: 30px;
 }
 
-.producto-destacado-img{
-    border: 4px solid var(--blanco);
-    border-radius: 10px;
-    height: 350px;
-    min-width: 350px; 
-    object-fit: cover;
+.producto-destacado-img {
+  border: 4px solid var(--blanco);
+  border-radius: 10px;
+  height: 350px;
+  min-width: 350px;
+  object-fit: cover;
 }
 
-.producto-destacado-info{
-    display: flex;
-    flex-direction: column;
-    height:100%;
-    gap: 30px;
+.producto-destacado-info {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  gap: 30px;
 }
 
-.producto-destacado-info p{
-    padding:15px;
-    background-color: rgb(62, 96, 190);
-    border-radius: 5px;
+.producto-destacado-info p {
+  padding: 15px;
+  background-color: rgb(62, 96, 190);
+  border-radius: 5px;
 }
 
 /* .producto-destacado-info > div > button, .filtros-btns button, .filtros-btns select, .menu-item-bottom button{
@@ -114,19 +118,23 @@ nav p, footer p{
     transition: .2s;
 } */
 
-button, a, select{
-    padding: 5px 10px;
-    font-family: var(--fuente-principal);
-    font-size: 15px;
-    background: var(--blanco);
-    color: var(--azul-oscuro);
-    border: none;
-    cursor: pointer;
-    transition: .2s;
+button,
+a,
+select {
+  padding: 5px 10px;
+  font-family: var(--fuente-principal);
+  font-size: 15px;
+  background: var(--blanco);
+  color: var(--azul-oscuro);
+  border: none;
+  cursor: pointer;
+  transition: 0.2s;
 }
 
-button:hover, a:hover, select:hover{
-    background:white;
+button:hover,
+a:hover,
+select:hover {
+  background: white;
 }
 
 /* .producto-destacado-info > div > button:hover, .filtros-btns button:hover, .filtros-btns select:hover, .menu-item-bottom button:hover{
@@ -135,70 +143,112 @@ button:hover, a:hover, select:hover{
 
 /* ESTILOS DEL MENU */
 
-.menu{
-    padding:70px 10% 30px 10%;
+.menu {
+  padding: 70px 10% 30px 10%;
 }
 
-.menu h2{
-    font-size: 30px;
+.menu h2 {
+  font-size: 30px;
 }
 
-.filtros-btns{
-    margin: 50px 0 20px 0;
+.filtros-btns {
+  margin: 50px 0 20px 0;
+  display: flex;
+  gap: 100px;
+}
+
+.filtros-btns button,
+.filtros-btns select {
+  width: 100%;
+  border: 1px solid var(--azul-oscuro);
+}
+
+.menu-items {
+  display: flex;
+  /* display: grid; */
+  /* grid-template-columns: 1fr 1fr 1fr; */
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 50px;
+}
+
+.menu-item {
+  position: relative;
+}
+
+.item-disponibilidad {
+  border-radius: 5px;
+  background-color: var(--blanco);
+  padding: 5px 10px;
+  right: 10px;
+  top: 10px;
+  position: absolute;
+}
+
+.no-disponible {
+  background-color: rgb(241, 113, 113);
+}
+
+.menu-item img {
+  height: 300px;
+  width: 300px;
+  object-fit: cover;
+  border-radius: 15px;
+}
+
+.menu-item-top,
+.menu-item-bottom {
+  padding-top: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.menu-item-bottom button {
+  border: 1px solid var(--azul-oscuro);
+}
+
+a {
+  border: 1px solid var(--azul-oscuro);
+  text-decoration: none;
+  color: var(--azul-oscuro);
+}
+
+/*  CARRITO ESTILOS */
+
+.cart-container {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+}
+
+.cart-btn {
+  position: relative;
+  background: none;
+}
+
+.cart-btn:hover {
+  background: none;
+}
+
+.cart-btn i {
+  border-radius: 100%;
+  padding: 15px;
+  font-size: 25px;
+  background: var(--amarillo);
+}
+
+.cart-items {
     display: flex;
-    gap: 100px;
-}
-
-.filtros-btns button, .filtros-btns select{
-    width: 100%;
-    border: 1px solid var(--azul-oscuro);
-}
-
-.menu-items{
-    display: flex;
-    /* display: grid; */
-    /* grid-template-columns: 1fr 1fr 1fr; */
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 50px;
-}
-
-.menu-item{
-    position: relative;
-}
-
-.item-disponibilidad{
-    border-radius: 5px;
-    background-color: var(--blanco);
-    padding: 5px 10px;
-    right: 10px; 
-    top: 10px;
-    position: absolute;
-}
-
-.no-disponible{
-    background-color: rgb(241, 113, 113);
-}
-
-.menu-item img{
-    height: 300px;
-    width: 300px;
-    object-fit: cover;
-    border-radius: 15px;
-}
-
-.menu-item-top, .menu-item-bottom{
-    padding-top:10px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.menu-item-bottom button{
-    border: 1px solid var(--azul-oscuro);
-}
-
-a{
-    border: 1px solid var(--azul-oscuro);
-    text-decoration: none;
-    color: var(--azul-oscuro);
+    justify-content: center;
+    align-items: center;
+    width: 20px;
+    height: 20px;
+    padding: 5px;
+    border-radius:100%;
+    /* font-size: 15px; */
+    font-weight: var(--bold);
+  background: var(--amarillo);
+  position: absolute;
+  right: 18px;
+  top: 10px;
 }
